[package]
name = "ros_types"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyclonedds-rs = {git = "https://github.com/sjames/cyclonedds-rs.git"}
dds_derive = {git = "https://github.com/sjames/cyclonedds-rs.git"}
serde = "1.0"
serde_derive = "1.0"
serde-big-array = {version = "0.3.2", features = ["const-generics"]}



